--- a/judge/templates/registration/password_reset_complete.html
+++ b/judge/templates/registration/password_reset_complete.html
@@ -5,28 +5,24 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Log into PNOJ</title>
+        <title>Reset password on PNOJ</title>
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <!-- Custom styles for this template -->
         <link href="{% static 'styles/login.css' %}" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/07422c648d.js" crossorigin="anonymous"></script>
     </head>
     <body class="text-center">
-
-        <form class="form-signin" method="post">
-            {% csrf_token %}
-
-            <a href="javascript:history.back()"><i class="fas fa-arrow-left mb-3"> Go back</i></a><br>
+        <form class="form-signin">
             <img class="mb-4" src="{% static 'logos/short.png' %}" alt="PNOJ Logo" width="72" height="72">
-            <h1 class="h3 mb-3 font-weight-normal">Log in</h1>
-            {{ form.as_p }}
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+            <h1 class="h3 mb-3 font-weight-normal">Reset password</h1>
+
+            <p class="mt-5 mb-3 text-wrap">
+                Your password has been set. You may go ahead and log in now.
+            </p>
+
             <p class="mt-5 mb-3 text-muted">
-                <a href="{% url 'signup' %}" class="text-left">Sign up</a>
-                <br>
-                <a href="{% url 'password_reset' %}" class="text-right">Reset my password</a>
-	    </p>
+                <a href="{% url 'login' %}" class="text-left">Log in</a>
+            </p>
         </form>
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
