--- a/judge/templates/registration/password_reset_form.html
+++ b/judge/templates/registration/password_reset_form.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Log into PNOJ</title>
+        <title>Reset password on PNOJ</title>
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <!-- Custom styles for this template -->
@@ -13,19 +13,17 @@
         <script src="https://kit.fontawesome.com/07422c648d.js" crossorigin="anonymous"></script>
     </head>
     <body class="text-center">
-
         <form class="form-signin" method="post">
             {% csrf_token %}
-
             <a href="javascript:history.back()"><i class="fas fa-arrow-left mb-3"> Go back</i></a><br>
             <img class="mb-4" src="{% static 'logos/short.png' %}" alt="PNOJ Logo" width="72" height="72">
-            <h1 class="h3 mb-3 font-weight-normal">Log in</h1>
+            <h1 class="h3 mb-3 font-weight-normal">Reset password</h1>
             {{ form.as_p }}
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Send email</button>
             <p class="mt-5 mb-3 text-muted">
-                <a href="{% url 'signup' %}" class="text-left">Sign up</a>
+                <a href="{% url 'login' %}" class="text-right">Log in</a>
                 <br>
-                <a href="{% url 'password_reset' %}" class="text-right">Reset my password</a>
+                <a href="{% url 'signup' %}" class="text-left">Sign up</a>
 	    </p>
         </form>
 
