--- a/judge/templates/registration/signup.html
+++ b/judge/templates/registration/signup.html
@@ -10,10 +10,12 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <!-- Custom styles for this template -->
         <link href="{% static 'styles/login.css' %}" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/07422c648d.js" crossorigin="anonymous"></script>
     </head>
     <body class="text-center">
         <form class="form-signin" method="post">
             {% csrf_token %}
+            <a href="javascript:history.back()"><i class="fas fa-arrow-left mb-3"> Go back</i></a><br>
             <img class="mb-4" src="{% static 'logos/short.png' %}" alt="PNOJ Logo" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
             {{ form.as_p }}
