--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -38,8 +38,10 @@
                 </nav>
 
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                    {% block main %}
-                    {% endblock %}
+                    <div class="card">
+                        {% block main %}
+                        {% endblock %}
+                    </div>
                 </main>
             </div>
         </div>
@@ -60,7 +62,7 @@
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown">
                             <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Logged in as {{ user.username }}</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+                            <a class="dropdown-item" href="{% url 'user_profile' %}">Profile</a>
                             <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                         </div>
                     </li>
