--- a/judge/templates/judge/index.html
+++ b/judge/templates/judge/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main %}
-Welcome to PNOJ! Please register or try out a problem <a href="{% url 'problems_index' %}">here</a>.
+<div class="card-body">
+    Welcome to PNOJ! Please register or try out a problem <a href="{% url 'problems_index' %}">here</a>.
+</div>
 {% endblock %}
