--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -38,7 +38,7 @@
                 </nav>
 
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                    <div class="card">
+                    <div class="mb-6">
                         {% block main %}
                         {% endblock %}
                     </div>
@@ -63,6 +63,9 @@
                             <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Logged in as {{ user.username }}</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'user_profile' %}">Profile</a>
+                            {% if user.is_staff %}
+                            <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+                            {% endif %}
                             <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                         </div>
                     </li>
