--- a/judge/templates/judge/index.html
+++ b/judge/templates/judge/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block main %}
-<div class="card-body">
-    Welcome to PNOJ! Please register or try out a problem <a href="{% url 'problems_index' %}">here</a>.
+<div class="card">
+    <div class="card-body">
+        Welcome to PNOJ! Please register or try out a problem <a href="{% url 'problems_index' %}">here</a>.
+    </div>
 </div>
 {% endblock %}
