--- a/judge/templates/registration/signup.html
+++ b/judge/templates/registration/signup.html
@@ -19,6 +19,9 @@
             <img class="mb-4" src="{% static 'logos/short.png' %}" alt="PNOJ Logo" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
             {{ form.as_p }}
+            <p>
+                By signing up, you agree to our <a href="/tos/">Terms of Service</a>.
+            </p>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
             <p class="mt-5 mb-3 text-muted">
                 <a href="{% url 'login' %}" class="text-left">Log in</a>
