--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -12,7 +12,7 @@
         {% if page_title %}
         <title>{{ page_title }}</title>
         {% elif flatpage.title %}
-        <title>{{ flatpage.title }}</title>
+        <title>PNOJ: {{ flatpage.title }}</title>
         {% endif %}
 
         <!-- Bootstrap core CSS -->
