--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -21,6 +21,9 @@
         </style>
         <!-- Custom styles for this template -->
         <link href="{% static 'styles/base.css' %}" rel="stylesheet">
+
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body>
 
