--- a/judge/templates/judge/problem.html
+++ b/judge/templates/judge/problem.html
@@ -8,7 +8,7 @@
         <div class="media">
             <div class="media-body">
                 <h5 class="mt-0">{{ problem.name }}</h5>
-                {{ problem.description|markdown }}
+                {{ problem.description|markdown|linebreaksbr }}
             </div>
         </div>
     </div>
