--- a/judge/templates/judge/submission.html
+++ b/judge/templates/judge/submission.html
@@ -48,7 +48,7 @@
             <tbody>
                 <tr>
                     <th scope="row">{{ testcase.name }}</th>
-                    <td>{{ testcase.status_display }}</td>
+                    <td>{{ testcase.status }}</td>
                     {% if testcase.time %}
                     <td>{{ testcase.time }}s</td>
                     {% else %}
