--- a/judge/templates/judge/profile.html
+++ b/judge/templates/judge/profile.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Points: {{ profile.points }}</li>
+        <li class="list-group-item">Points: {{ profile.points|floatformat }}</li>
         <li class="list-group-item">Number of Problems Solved: {{ profile.num_problems_solved }}</li>
     </ul>
     </div>
