--- a/judge/templates/base_comments.html
+++ b/judge/templates/base_comments.html
@@ -33,7 +33,7 @@
         <form method="POST" action="{{ request.path }}/add_comment">
             {% csrf_token %}
             <div class="form-group my-3">
-                <textarea class="form-control" id="comment" rows="3" name="text"></textarea>
+                <textarea class="form-control" id="comment" rows="3" name="text" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary mb-2">Submit</button>
         </form>
