--- a/judge/templates/base_pnoj.html
+++ b/judge/templates/base_pnoj.html
@@ -22,8 +22,21 @@
         <!-- Custom styles for this template -->
         <link href="{% static 'styles/base.css' %}" rel="stylesheet">
 
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"></script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                renderMathInElement(document.body, {
+                    delimiters: [
+                        {left: "$$", right: "$$", display: true},
+                        {left: "\(", right: "\)", display: false},
+                        {left: "\[", right: "\]", display: true}
+                    ],
+                    maxSize: 50,
+                });
+            });
+        </script>
     </head>
     <body>
 
@@ -39,22 +52,22 @@
                                 {% get_flatpages flatpage_name.1 as flatpage %}
                                 <a class="nav-link" href="{{ flatpage.0.url }}">
                                     {{ flatpage.0.title }}
-                                {% endwith %}
-                                {% elif item.view|startswith:"external " %}
-                                {% with external_url=item.view|split %}
-                                <a class="nav-link" href="{{ external_url.1 }}">
-                                    {{ item.name }}
-                                {% endwith %}
-                                {% else %}
-                                {% if item.view == request.resolver_match.view_name %}
-                                <a class="nav-link active" href="{% url item.view %}">
-                                    {{ item.name }}
-                                {% else %}
-                                <a class="nav-link" href="{% url item.view %}">
-                                    {{ item.name }}
-                                {% endif %}
-                                {% endif %}
-                                </a>
+                                    {% endwith %}
+                                    {% elif item.view|startswith:"external " %}
+                                    {% with external_url=item.view|split %}
+                                    <a class="nav-link" href="{{ external_url.1 }}">
+                                        {{ item.name }}
+                                        {% endwith %}
+                                        {% else %}
+                                        {% if item.view == request.resolver_match.view_name %}
+                                        <a class="nav-link active" href="{% url item.view %}">
+                                            {{ item.name }}
+                                            {% else %}
+                                            <a class="nav-link" href="{% url item.view %}">
+                                                {{ item.name }}
+                                                {% endif %}
+                                                {% endif %}
+                                            </a>
                             </li>
                             {% endfor %}
                             {% block sidebar %}
@@ -77,7 +90,7 @@
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-bottom bg-dark flex-md-nowrap p-0">
-                        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">
+            <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">
                 <div class="text-center">
                     <img src="{% static 'logos/inverted-long.png' %}" height="30" alt="Inverted long PNOJ logo">
                 </div>
