--- a/judge/templates/base_pnoj.html
+++ b/judge/templates/base_pnoj.html
@@ -30,8 +30,8 @@
                 renderMathInElement(document.body, {
                     delimiters: [
                         {left: "$$", right: "$$", display: true},
-                        {left: "\(", right: "\)", display: false},
-                        {left: "\[", right: "\]", display: true}
+                        {left: "\\(", right: "\\)", display: false},
+                        {left: "\\[", right: "\\]", display: true}
                     ],
                     maxSize: 50,
                 });
