--- a/judge/templates/judge/index.html
+++ b/judge/templates/judge/index.html
@@ -15,12 +15,13 @@
     </div>
     <ul class="list-group list-group-flush">
         {% for post in posts %}
-        <a href="{% url 'blog_post' post.slug %}" class="list-group-item list-group-item-action">
-            <h5 class="mb-1">{{ post.title }}</h5>
+        <!-- <a href="{% url 'blog_post' post.slug %}" class="list-group-item list-group-item-action"> -->
+        <li class="list-group-item">
+            <a href="{% url 'blog_post' post.slug %}"><h5 class="mb-1">{{ post.title }}</h5></a>
             <h6 class="mb-3 text-muted">{{ post.author.all|join:", " }} posted {{ post.created|naturaltime }}</h6>
             <!-- <small>{{ post.author.all|join:", " }} posted {{ post.created|naturaltime }}</small> -->
-            <p class="mb-1">{{ post.text|markdown|truncatewords_html:100 }}</p>
-        </a>
+            <p class="mb-1">{{ post.text|markdown }}</p>
+        </li>
         {% endfor %}
     </ul>
 </div>
