--- a/judge/static/styles/base.css
+++ b/judge/static/styles/base.css
@@ -127,3 +127,15 @@ body {
 .mb-6 {
   margin-bottom: 100px !important;
 }
+
+.editor-container {
+    height: 10cm;
+}
+
+#editor { 
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
