add submission_source view

--- a/judge/templates/base_pnoj.html
+++ b/judge/templates/base_pnoj.html
@@ -39,6 +39,9 @@
                 });
             });
         </script>
+
+        {% block head %}
+        {% endblock %}
     </head>
     <body>
 
