--- a/judge/templates/base_pnoj.html
+++ b/judge/templates/base_pnoj.html
@@ -140,6 +140,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script> -->
         <script src="https://vuejs.org/js/vue.min.js"></script>
+        <!-- <script src="https://vuejs.org/js/vue.js"></script> -->
         <script src="https://pagecdn.io/lib/ace/1.4.8/ace.js" type="text/javascript" charset="utf-8" onload=""></script>
 
         {% block script %}
