--- a/judge/templates/judge/problem_submit.html
+++ b/judge/templates/judge/problem_submit.html
@@ -27,7 +27,7 @@
                     {% endfor %}
                 </select>
             </p>
-            <button type="submit" class="btn btn-primary mr-2 my-auto">Submit</button>
+            <button type="submit" class="btn btn-primary mr-2 my-auto">{% templatetag openvariable %} submit_button_text {% templatetag closevariable %}</button>
         </form>
     </div>
 </div>
@@ -35,7 +35,6 @@
 
 {% block navbar %}
 <a href="{% url 'problem' problem.slug %}" class="btn btn-primary ml-3 my-auto" role="button" aria-pressed="true">Cancel</a>
-<button type="submit" class="btn btn-primary mr-2 my-auto" form="problem_submit_form">Submit</button>
 {% endblock %}
 
 {% block script %}
