remove submit_button_text from vue in submit.js

--- a/judge/templates/judge/problem_submit.html
+++ b/judge/templates/judge/problem_submit.html
@@ -27,7 +27,8 @@
                     {% endfor %}
                 </select>
             </p>
-            <button type="submit" class="btn btn-primary mr-2 my-auto">{% templatetag openvariable %} submit_button_text {% templatetag closevariable %}</button>
+            <!-- <button type="submit" class="btn btn-primary mr-2 my-auto">{% templatetag openvariable %} submit_button_text {% templatetag closevariable %}</button> -->
+            <button type="submit" class="btn btn-primary mr-2 my-auto">Submit</button>
         </form>
     </div>
 </div>
