--- a/judge/templates/judge/problem_submit.html
+++ b/judge/templates/judge/problem_submit.html
@@ -40,4 +40,5 @@
 
 {% block script %}
 <script src="{% static 'scripts/submit.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/jszip@3.5.0/dist/jszip.min.js" integrity="sha256-cNXRgwrU74TQiTDsep3TqNE1ZOBPrOmYVYWi+fM8czw=" crossorigin="anonymous"></script>
 {% endblock %}
